namespace glytics.Common.Models.Applications
{
    public class SearchRequest
    {
        public string Term { get; set; }
    }
}